# odp-platform-common

./: .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md
.github/: copilot-instructions.md
.github/workflows/: cargo-vet-pr-comment.yml  cargo-vet.yml  check.yml
common/supply-chain/: config.toml
ec/: Cargo.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
ec-test-app/: .gitignore  README.md
ec-test-app/exe/: ectest.cpp  ectest_app.vcxproj
ec-test-app/inc/: eclib.h  ectest.h
ec-test-app/kmdf/: device.h  driver.c  ectest.inx  ectest_kmdf.vcxproj  ffainterface.h  public.h  queue.c  trace.h
ec-test-app/lib/: eclib.vcxproj
ec-test-app/rust/: Cargo.toml  build.rs  rust-toolchain.toml
ec-test-app/rust/src/: acpi.rs  app.rs  battery.rs  common.rs  lib.rs  main.rs  mock.rs  rtc.rs  serial.rs  thermal.rs
ec-test-app/rust/src/widgets/: battery.rs  bolt.rs
ec/.cargo/: config.toml
ec/test-cli/: Cargo.toml  README.md
ec/test-cli/src/: cli.rs  debug.rs  main.rs
ec/test-cli/src/commands/: battery.rs  mod.rs  rtc.rs  script.rs  thermal.rs
ec/test-lib/: Cargo.toml  README.md
ec/test-lib/src/: acpi.rs  common.rs  lib.rs  mock.rs  serial.rs
ec/test-script/: Cargo.toml  README.md
ec/test-script/examples/: advanced.test  battery.test  full.test  rtc.test  thermal.test
ec/test-script/src/: exec.rs  lib.rs  parser.rs  runner.rs  value.rs  verbs.rs
ec/test-script/tests/: mock.rs
ec/test-tui/: Cargo.toml  README.md
ec/test-tui/src/: app.rs  battery.rs  common.rs  logging.rs  main.rs  rtc.rs  source.rs  state.rs  system.rs  thermal.rs  ucsi.rs  updater.rs
ec/test-tui/src/widgets/: battery.rs  bolt.rs  mod.rs
ec/test-win/: README.md
ec/test-win/exe/: ectest.cpp  ectest_app.vcxproj
ec/test-win/kmdf/: device.c  driver.h  ffa.h  queue.h
ec/test-win/lib/: eclib.cpp
uefi/OdpPkg/: OdpPkg.dec
uefi/OdpPkg/Drivers/ODP_PatinaSmbiosDemo/: Cargo.toml  README.md  rust-toolchain.toml
uefi/OdpPkg/Drivers/ODP_PatinaSmbiosDemo/src/: main.rs  platform.rs
uefi/OdpPkg/Drivers/ODP_RustDxeDemo/: Cargo.toml  README.md
uefi/OdpPkg/Drivers/ODP_RustDxeDemo/src/: main.rs
uefi/OdpPkg/Include/: README.md
uefi/crates/patina_boot/: Cargo.toml
uefi/crates/patina_boot/src/: helpers.rs
uefi/crates/patina_tianocore/: .gitignore  Cargo.toml  rust-toolchain.toml  rustfmt.toml
uefi/crates/patina_tianocore/src/: boot_services.rs  context.rs  entry.rs  lib.rs  logger.rs  macro_support.rs  memory.rs  platform.rs  prelude.rs
uefi/crates/patina_tianocore/tests/: dispatch_test.rs
