# Cargo manifest for the ec workspace
#
# SPDX-License-Identifier: MIT
#

[workspace]
members = ["test-cli", "test-lib", "test-script", "test-tui"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/OpenDevicePartnership/odp-platform-common"
rust-version = "1.88"

[workspace.lints.clippy]
suspicious = "deny"
correctness = "deny"
perf = "deny"
style = "deny"

[workspace.dependencies]
time-alarm-service-interface = { git = "https://github.com/OpenDevicePartnership/embedded-services", branch = "main" }
time-alarm-service-relay = { git = "https://github.com/OpenDevicePartnership/embedded-services", branch = "main" }
battery-service-interface = { git = "https://github.com/OpenDevicePartnership/embedded-services", branch = "main" }
battery-service-relay = { git = "https://github.com/OpenDevicePartnership/embedded-services", branch = "main" }
thermal-service-relay = { git = "https://github.com/OpenDevicePartnership/embedded-services", branch = "main" }
embedded-services = { git = "https://github.com/OpenDevicePartnership/embedded-services", branch = "main" }
mctp-rs = { git = "https://github.com/OpenDevicePartnership/embedded-services", branch = "main", features = ["serial"] }
embedded-mcu-hal = "0.3.0"
clap = { version = "4.6.0", features = ["derive"] }

# Note: This is needed because the service message crates use `embedded-services` as a transitive dep.
# `embedded-services` depends on `critical-section` so we need to provide an implementation.
# We provide the `std` implementation here just to satisfy the dependency, but it is not actually needed.
# This isn't needed in `release` build since it seems CS stuff is eliminated as dead-code, but needed for `dev`.
critical-section = { version = "1", features = ["std"] }

embassy-time = { version = "0.5", features = ["std", "generic-queue-8"] }

[workspace.metadata.cargo-machete]
ignored = ["critical-section"]
