[package]
name = "ec_demo"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "RUST based UI to demo EC features"
authors = ["Phil Weber <philweber@microsoft.com>"]
repository = "https://github.com/OpenDevicePartnership/odp-platform-common"
rust-version = "1.88"

[dependencies]
# dependencies for all targets
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
num_enum = { version = "0.7.5", default-features = false }
strum = { version = "0.27", default-features = false, features = ["derive"] }
tui-input = "0.14.0"
uuid = { version = "1.17.0", default-features = false }
time-alarm-service-messages = { git = "https://github.com/OpenDevicePartnership/embedded-services", branch = "v0.2.0" }
embedded-mcu-hal = { git = "https://github.com/OpenDevicePartnership/embedded-mcu" }
thermal-service-messages = { git = "https://github.com/OpenDevicePartnership/embedded-services", branch = "v0.2.0" }
battery-service-messages = { git = "https://github.com/OpenDevicePartnership/embedded-services", branch = "v0.2.0" }

# Serial feature specific
serialport = { version = "4.8.1", optional = true }
embedded-services = { git = "https://github.com/OpenDevicePartnership/embedded-services", branch = "v0.2.0", optional = true }

[features]
mock = []
acpi = []
serial = ["dep:serialport", "dep:embedded-services"]

[lints.clippy]
suspicious = "forbid"
correctness = "forbid"
perf = "forbid"
style = "forbid"
