# Cargo manifest for the ec-test-cli crate
#
# SPDX-License-Identifier: MIT
#

[package]
name = "ec-test-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "CLI tool for EC feature testing"
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
critical-section.workspace = true
ec-test-lib = { path = "../test-lib" }
time-alarm-service-messages.workspace = true
battery-service-messages.workspace = true

[lints]
workspace = true
