# Cargo manifest for the ec-test-script crate
#
# SPDX-License-Identifier: MIT
#

[package]
name = "ec-test-script"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Text-DSL integration test runner for ec-test-lib sources"
repository.workspace = true
rust-version.workspace = true

[dependencies]
ec-test-lib = { path = "../test-lib" }
time-alarm-service-messages.workspace = true
battery-service-messages.workspace = true

[dev-dependencies]
critical-section.workspace = true

[lints]
workspace = true
