# Cargo manifest for the ec-test-script crate
#
# SPDX-License-Identifier: MIT
#

[package]
name = "ec-test-script"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Text-DSL integration test runner for ec-test-lib sources"
repository.workspace = true
rust-version.workspace = true

[dependencies]
ec-test-lib = { path = "../test-lib" }
time-alarm-service-interface.workspace = true
battery-service-interface.workspace = true

[dev-dependencies]
critical-section.workspace = true
# embassy-time is pulled transitively (via the service-relay crates) with no
# time driver; the test binaries reference one. Activate the workspace std
# driver so the host test build links (`std` => embassy-time's driver_std).
embassy-time.workspace = true

[lints]
workspace = true
